릴리즈 빌드도 추가

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ dkms.conf
 /CameraShare/.vs/CameraShare/v16
 /CameraShare/obj/x64/Debug
 /CameraShare/obj/ARM64/Debug
+/CameraShare/obj/ARM64/Release
